bug fixes on mobile device

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -77,6 +77,7 @@
 
 /* utility class */
 kbd{padding: var(--space-sm);background-color: var(--surface2);width: max-content;}
+.betanotif {position: fixed;top: 0;left: 50%;transform: translateX(-50%);display: flex;align-items: center;justify-content: center;gap: 8px;font-family: 'Nunito', sans-serif;font-size: .8em;font-weight: 600;padding: var(--space-sm) var(--space-sm);border-radius: 0 0 4px 4px;background-color: var(--surface2);color: var(--text-white);transition: all .3s ease-in-out;z-index: 101;&:hover {background-color: crimson;}& i {color: gold;}}
 .overlay-page-bottom{position: absolute;bottom: 0;left: 0;right: 0;width: 100%;height: 8vw;background: var(--surface-1-grad);z-index: 11;}
 .p-center{justify-content: center;text-align: center;}
 .brl-left {border-left: 1px solid var(--bg-white-dim);}
